--- a/personal-portfolio/index.html
+++ b/personal-portfolio/index.html
@@ -7,6 +7,9 @@
     <title>Portfolio</title>
     <!-- Font Awesome link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Tangerine:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
